fixed team image centering on mobile, and heading text on top image

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -42,7 +42,7 @@ h6 {
 .intro-message {
     position: relative;
     padding-top: 30%;
-    padding-bottom: 20%;
+    padding-bottom: 5%;
 }
 
 .intro-message > h1 {
@@ -173,6 +173,7 @@ p.copyright {
   border-radius: 100%;
   max-width: 250px;
   padding: 10%;
+  margin: 0 auto;
 }
 
 .full-iframe {
